# usb_nfc_reader

./: .gitignore  CMakeLists.txt  nfc_device.c  nfc_device.h  nfc_reader.c  nfc_utils.c  nfc_utils.h  usb_device.c  usb_device.h
